; ModuleID = '/home/carl/AnghaBench/git/extr_path.c_getpw_str.c'
source_filename = "/home/carl/AnghaBench/git/extr_path.c_getpw_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.passwd = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.passwd* (i8*, i64)* @getpw_str to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.passwd* @getpw_str(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.passwd*, align 8
  %6 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = load i64, i64* %4, align 8
  %9 = call i8* @xmemdupz(i8* %7, i64 %8)
  store i8* %9, i8** %6, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = call %struct.passwd* @getpwnam(i8* %10)
  store %struct.passwd* %11, %struct.passwd** %5, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = call i32 @free(i8* %12)
  %14 = load %struct.passwd*, %struct.passwd** %5, align 8
  ret %struct.passwd* %14
}

declare dso_local i8* @xmemdupz(i8*, i64) #1

declare dso_local %struct.passwd* @getpwnam(i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
